Etapa 4 terminada. Responsive para cualquier tamaño de pantalla. Comportamiento del menú para cambios de tamaño de ventana del navegador

--- a/receta.html
+++ b/receta.html
@@ -31,27 +31,31 @@
     <article class="container recipe">
       <header>
         <h2>Costillar al asador</h2>
-        <figure>
-          <img src="img/asado_640_480.jpg" alt="Imágen de carne asada">
-        </figure>
-        <div>
-          <p>
-            En Argentina, el asado no es solo comida: es un ritual, un momento de encuentro y tradición que reúne familia y amigos alrededor del fuego. Y dentro de este ritual, el costillar de vaca a la llama ocupa un lugar especial. Cocinar un buen costillar no es solo cuestión de calor, sino de paciencia y respeto por la carne: la costra de sal, el dorado uniforme y el aroma a leña son los protagonistas de este clásico que nunca pasa de moda.
-          </p>
-          <p>
-            En esta receta te vamos a mostrar cómo preparar un costillar entero al asador, con técnicas simples para que quede jugoso, dorado y con el sabor auténtico del fuego argentino. Ideal para compartir un domingo a la tarde con una ensalada fresca o papas fritas.
-          </p>
+        <div class="recipe-presentation">
+          <figure>
+            <img src="img/asado_640_480.jpg" alt="Imágen de carne asada">
+          </figure>
+          <div>
+            <div>
+              <p>
+                En Argentina, el asado no es solo comida: es un ritual, un momento de encuentro y tradición que reúne familia y amigos alrededor del fuego. Y dentro de este ritual, el costillar de vaca a la llama ocupa un lugar especial. Cocinar un buen costillar no es solo cuestión de calor, sino de paciencia y respeto por la carne: la costra de sal, el dorado uniforme y el aroma a leña son los protagonistas de este clásico que nunca pasa de moda.
+              </p>
+              <p>
+                En esta receta te vamos a mostrar cómo preparar un costillar entero al asador, con técnicas simples para que quede jugoso, dorado y con el sabor auténtico del fuego argentino. Ideal para compartir un domingo a la tarde con una ensalada fresca o papas fritas.
+              </p>
+            </div>
+            <div class="recipe-data">
+              <p>
+                <strong>Dificultad media</strong>
+              </p>
+              <p>
+                <strong>1h 30min aprox.</strong>
+              </p>
+            </div>
+          </div>
         </div>
       </header>
-      <section class="recipe-section">
-        <h3>Datos</h3>
-        <p>
-          <strong>Dificultad media</strong>
-        </p>
-        <p>
-          <strong>1h 30min aprox.</strong>
-        </p>
-      </section>
+      
       <section class="recipe-section">
         <h3>Ingredientes</h3>
         <ul>
