--- a/catalogo.html
+++ b/catalogo.html
@@ -71,7 +71,77 @@
         </select>
       </form>
 
-      <div class="grid">
+      <div class="catalog-grid">
+        <article class="card">
+          <figure>
+            <img src="img/asado_640_480.jpg" alt="Imágen de carne asada">
+          </figure>
+          <div>
+            <h2>Costillar al asador</h2>
+            <div class="card-data">
+              <p>
+                <strong>Dificultad media</strong>
+              </p>
+              <p>
+                <strong>1h 30min aprox.</strong>
+              </p>
+            </div>
+            <a href="receta.html">Ver receta...</a>
+          </div>
+        </article>
+
+        <article class="card">
+          <figure>
+            <img src="img/mila_napo_640_480.jpg" alt="Imágen de milanesa napolitana">
+          </figure>
+          <div>
+            <h2>Milanesa Napolitana</h2>
+            <div class="card-data">
+              <p>
+                <strong>Dificultad baja</strong>
+              </p>
+              <p>
+                <strong>50min aprox.</strong>
+              </p>
+            </div>
+            <a href="receta.html">Ver receta...</a>
+          </div>
+        </article> 
+        <article class="card">
+          <figure>
+            <img src="img/asado_640_480.jpg" alt="Imágen de carne asada">
+          </figure>
+          <div>
+            <h2>Costillar al asador</h2>
+            <div class="card-data">
+              <p>
+                <strong>Dificultad media</strong>
+              </p>
+              <p>
+                <strong>1h 30min aprox.</strong>
+              </p>
+            </div>
+            <a href="receta.html">Ver receta...</a>
+          </div>
+        </article>
+
+        <article class="card">
+          <figure>
+            <img src="img/mila_napo_640_480.jpg" alt="Imágen de milanesa napolitana">
+          </figure>
+          <div>
+            <h2>Milanesa Napolitana</h2>
+            <div class="card-data">
+              <p>
+                <strong>Dificultad baja</strong>
+              </p>
+              <p>
+                <strong>50min aprox.</strong>
+              </p>
+            </div>
+            <a href="receta.html">Ver receta...</a>
+          </div>
+        </article> 
         <article class="card">
           <figure>
             <img src="img/asado_640_480.jpg" alt="Imágen de carne asada">
