Etapa 5 terminada. Implementación de administrador de recetas. Persistencia con localStorage

--- a/catalogo.html
+++ b/catalogo.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RecetasYa - Catálogo de recetas</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/catalogo.css">
 </head>
 <body>
   <header>
@@ -23,6 +24,7 @@
           <li><a href="index.html">Inicio</a></li>
           <li><a href="catalogo.html">Catálogo</a></li>
           <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="admin.html">Admin</a></li>
         </ul>
       </nav>
     </div>
@@ -71,112 +73,8 @@
         </select>
       </form>
 
-      <div class="catalog-grid">
-        <article class="card">
-          <figure>
-            <img src="img/asado_640_480.jpg" alt="Imágen de carne asada">
-          </figure>
-          <div>
-            <h2>Costillar al asador</h2>
-            <div class="card-data">
-              <p>
-                <strong>Dificultad media</strong>
-              </p>
-              <p>
-                <strong>1h 30min aprox.</strong>
-              </p>
-            </div>
-            <a href="receta.html">Ver receta...</a>
-          </div>
-        </article>
-
-        <article class="card">
-          <figure>
-            <img src="img/mila_napo_640_480.jpg" alt="Imágen de milanesa napolitana">
-          </figure>
-          <div>
-            <h2>Milanesa Napolitana</h2>
-            <div class="card-data">
-              <p>
-                <strong>Dificultad baja</strong>
-              </p>
-              <p>
-                <strong>50min aprox.</strong>
-              </p>
-            </div>
-            <a href="receta.html">Ver receta...</a>
-          </div>
-        </article> 
-        <article class="card">
-          <figure>
-            <img src="img/asado_640_480.jpg" alt="Imágen de carne asada">
-          </figure>
-          <div>
-            <h2>Costillar al asador</h2>
-            <div class="card-data">
-              <p>
-                <strong>Dificultad media</strong>
-              </p>
-              <p>
-                <strong>1h 30min aprox.</strong>
-              </p>
-            </div>
-            <a href="receta.html">Ver receta...</a>
-          </div>
-        </article>
-
-        <article class="card">
-          <figure>
-            <img src="img/mila_napo_640_480.jpg" alt="Imágen de milanesa napolitana">
-          </figure>
-          <div>
-            <h2>Milanesa Napolitana</h2>
-            <div class="card-data">
-              <p>
-                <strong>Dificultad baja</strong>
-              </p>
-              <p>
-                <strong>50min aprox.</strong>
-              </p>
-            </div>
-            <a href="receta.html">Ver receta...</a>
-          </div>
-        </article> 
-        <article class="card">
-          <figure>
-            <img src="img/asado_640_480.jpg" alt="Imágen de carne asada">
-          </figure>
-          <div>
-            <h2>Costillar al asador</h2>
-            <div class="card-data">
-              <p>
-                <strong>Dificultad media</strong>
-              </p>
-              <p>
-                <strong>1h 30min aprox.</strong>
-              </p>
-            </div>
-            <a href="receta.html">Ver receta...</a>
-          </div>
-        </article>
-
-        <article class="card">
-          <figure>
-            <img src="img/mila_napo_640_480.jpg" alt="Imágen de milanesa napolitana">
-          </figure>
-          <div>
-            <h2>Milanesa Napolitana</h2>
-            <div class="card-data">
-              <p>
-                <strong>Dificultad baja</strong>
-              </p>
-              <p>
-                <strong>50min aprox.</strong>
-              </p>
-            </div>
-            <a href="receta.html">Ver receta...</a>
-          </div>
-        </article> 
+      <div class="recipe-catalog">
+        
       </div>
     </section>
   </main>
@@ -186,5 +84,7 @@
     </div>
   </footer>
   <script src="js/main.js"></script>
+  <script src="js/data.js"></script>
+  <script src="js/catalogo.js"></script>
 </body>
 </html>
