--- a/receta.html
+++ b/receta.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RecetasYa - Costillar al asador</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/receta.css">
 </head>
 <body>
   <header>
@@ -23,6 +24,7 @@
           <li><a href="index.html">Inicio</a></li>
           <li><a href="catalogo.html">Catálogo</a></li>
           <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="admin.html">Admin</a></li>
         </ul>
       </nav>
     </div>
