--- a/contacto.html
+++ b/contacto.html
@@ -23,6 +23,7 @@
           <li><a href="index.html">Inicio</a></li>
           <li><a href="catalogo.html">Catálogo</a></li>
           <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="admin.html">Admin</a></li>
         </ul>
       </nav>
     </div>
